--- a/trunk/facebook-java-api-schema/pom.xml
+++ b/trunk/facebook-java-api-schema/pom.xml
@@ -54,31 +54,38 @@
   <build>
     <plugins>
       <plugin>
-	<groupId>org.jvnet.jaxb2.maven2</groupId>
-	<artifactId>maven-jaxb2-plugin</artifactId>
-	<configuration>
-	  <generatePackage>com.google.code.facebookapi.schema</generatePackage>
-	  <extension>true</extension>
-	  <args>
-            <arg>-XtoString</arg>
-            <arg>-Xequals</arg>
-            <arg>-XhashCode</arg>
-	  </args>
-	  <plugins>
-            <plugin>
-              <groupId>org.jvnet.jaxb2_commons</groupId>
-              <artifactId>basic</artifactId>
-              <version>0.4.1.3</version>
-            </plugin>
-	  </plugins>
-	</configuration>
-	<executions>
-	  <execution>
-	    <goals>
-	      <goal>generate</goal>
-	    </goals>
-	  </execution>
-	</executions>
+		<groupId>org.jvnet.jaxb2.maven2</groupId>
+		<artifactId>maven-jaxb2-plugin</artifactId>
+		<configuration>
+		  <generatePackage>com.google.code.facebookapi.schema</generatePackage>
+		  <extension>true</extension>
+		  <args>
+	            <arg>-XtoString</arg>
+	            <arg>-Xequals</arg>
+	            <arg>-XhashCode</arg>
+		  </args>
+		  <plugins>
+	            <plugin>
+	              <groupId>org.jvnet.jaxb2_commons</groupId>
+	              <artifactId>basic</artifactId>
+	              <version>0.4.1.3</version>
+	            </plugin>
+		  </plugins>
+		</configuration>
+		<dependencies>
+			<dependency>
+		      <groupId>commons-logging</groupId>
+		      <artifactId>commons-logging</artifactId>
+		      <version>1.1.1</version>
+		    </dependency>
+	    </dependencies>
+		<executions>
+		  <execution>
+		    <goals>
+		      <goal>generate</goal>
+		    </goals>
+		  </execution>
+		</executions>
       </plugin>
     </plugins>
   </build>
