--- a/trunk/facebook-java-api/pom.xml
+++ b/trunk/facebook-java-api/pom.xml
@@ -58,6 +58,26 @@
         <artifactId>log4j</artifactId>
         <version>1.2.15</version>
         <scope>test</scope>
+        <exclusions>
+        	<!-- 
+        	Excluded packages which are not available
+        	on the main Maven repository because otherwise
+        	it's a pain, you have to download them and install
+        	them to your local repository manually.
+        	 -->
+        	<exclusion>
+        		<groupId>javax.jms</groupId>
+        		<artifactId>jms</artifactId>
+        	</exclusion>
+        	<exclusion>
+        		<groupId>com.sun.jdmk</groupId>
+        		<artifactId>jmxtools</artifactId>
+        	</exclusion>
+        	<exclusion>
+        		<groupId>com.sun.jmx</groupId>
+        		<artifactId>jmxri</artifactId>
+        	</exclusion>
+        </exclusions>
     </dependency>
   </dependencies>
   <build>
