--- a/pom.xml
+++ b/pom.xml
@@ -13,29 +13,15 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/ma
 		    <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>1.5</source>
-                    <target>1.5</target>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                    <!-- Unfortunately, Maven requires a fork -->
+                    <fork>true</fork>
+			        <executable>${java.home}/../bin/javac</executable>
+			        <compilerArgument>-proc:none</compilerArgument>
                 </configuration>
 		    </plugin>
 		</plugins>
 	</build>
-
-    <!-- Don't need tools.jar for a Java 6 annotation -->
-	<profiles>
-		<profile>
-			<activation>
-			    <activeByDefault>true</activeByDefault>
-			</activation>
-			<dependencies>
-				<dependency>
-					<groupId>java</groupId>
-					<artifactId>tools</artifactId>
-					<version>1.5.0</version>
-					<scope>system</scope>
-					<systemPath>${java.home}/../lib/tools.jar</systemPath>
-				</dependency>
-			</dependencies>
-		</profile>
-	</profiles>
 
 </project>
