--- a/branches/composition/facebook-java-api-schema/pom.xml
+++ b/branches/composition/facebook-java-api-schema/pom.xml
@@ -17,7 +17,13 @@
     <dependency>
       <groupId>org.jvnet.jaxb2_commons</groupId> 
       <artifactId>runtime</artifactId>
-      <version>RELEASE</version>
+      <version>0.4.1.5</version>
+      <exclusions>
+      	<exclusion>
+      	  <groupId>com.sun.xml.bind</groupId>
+      	  <artifactId>jaxb-impl</artifactId>
+      	</exclusion>
+      </exclusions>
     </dependency> 
   </dependencies>
   
@@ -27,14 +33,6 @@
       <name>Java.net Maven 2 Repository</name>
       <url>http://download.java.net/maven/2</url>
     </repository>
-    <!--
-	<repository>
-	  <id>maven-repository.dev.java.net</id>
-	  <name>Java.net Maven 1 Repository (legacy)</name>
-	  <url>http://download.java.net/maven/1</url>
-	  <layout>legacy</layout>
-	</repository>
-	-->
   </repositories>
   <pluginRepositories>
     <pluginRepository>
@@ -42,14 +40,6 @@
       <name>Java.net Maven 2 Repository</name>
       <url>http://download.java.net/maven/2</url>
     </pluginRepository>
-    <!--
-	<pluginRepository>
-	  <id>maven-repository.dev.java.net</id>
-	  <name>Java.net Maven 1 Repository (legacy)</name>
-	  <url>http://download.java.net/maven/1</url>
-	  <layout>legacy</layout>
-	</pluginRepository>
-	-->
   </pluginRepositories>
   <build>
     <plugins>
@@ -69,10 +59,17 @@
         <plugin>
           <groupId>org.jvnet.jaxb2_commons</groupId>
           <artifactId>basic</artifactId>
-          <version>RELEASE</version>
+          <version>0.4.1.5</version>
         </plugin>
       </plugins>
     </configuration>
+    <dependencies>
+	  <dependency>
+	    <groupId>commons-logging</groupId>
+	    <artifactId>commons-logging</artifactId>
+	    <version>1.1.1</version>
+	  </dependency>
+    </dependencies>
 	<executions>
 	  <execution>
 	    <goals>
@@ -83,25 +80,4 @@
       </plugin>
     </plugins>
   </build>
-  <profiles>
-    <profile>
-      <activation>
-	<jdk>1.5</jdk>
-      </activation>
-      <dependencies>
-	<dependency>
-	  <groupId>com.sun.xml.bind</groupId>
-	  <artifactId>jaxb-impl</artifactId>
-	  <version>2.1.3</version>
-	</dependency>
-	<!--
-	    <dependency>
-	      <groupId>javax.xml.bind</groupId>
-	      <artifactId>jsr173_api</artifactId>
-	      <version>1.0</version>
-	    </dependency>
-	    -->
-      </dependencies>
-    </profile>
-  </profiles>
 </project>
