--- a/branches/composition/facebook-java-api/pom.xml
+++ b/branches/composition/facebook-java-api/pom.xml
@@ -52,7 +52,19 @@
       <artifactId>commons-httpclient</artifactId>
       <version>3.1</version>
       <scope>test</scope>
-    </dependency>    
+    </dependency>
+    <!--
+        Compile-time Annotation processor shouldn't end
+        up on runtime classpath
+    -->
+    <!--
+    <dependency>
+      <groupId>com.google.code.facebookapi</groupId>
+      <artifactId>facebook-api-annotation-6-processor</artifactId>
+      <version>1.0</version>
+      <scope>provided</scope>
+    </dependency>
+    -->
   </dependencies>
   <build>
     <plugins>
@@ -101,25 +113,4 @@
       </plugin>
     </plugins>
   </build>
-  <profiles>
-    <profile>
-      <activation>
-        <jdk>1.5</jdk>
-      </activation>
-      <dependencies>
-        <dependency>
-          <groupId>com.sun.xml.bind</groupId>
-          <artifactId>jaxb-impl</artifactId>
-          <version>2.1.3</version>
-        </dependency>
-        <!--
-            <dependency>
-              <groupId>javax.xml.bind</groupId>
-              <artifactId>jsr173_api</artifactId>
-              <version>1.0</version>
-            </dependency>
-            -->
-      </dependencies>
-    </profile>
-  </profiles>
 </project>
