--- a/branches/composition/facebook-java-api/pom.xml
+++ b/branches/composition/facebook-java-api/pom.xml
@@ -88,29 +88,27 @@
           </descriptors>
         </configuration>
       </plugin>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>apt-maven-plugin</artifactId>
-        <configuration>
-          <factory>com.google.code.facebookapi.apt.FacebookReturnTypeProcessorFactory5</factory>
-          <fork>true</fork>
-          <executable>${java.home}/../bin/apt</executable>       
-        </configuration>
-        <executions>
-            <execution>
-                <goals>
-                    <goal>process</goal>
-                </goals>
-            </execution>
-        </executions>
-        <dependencies>
-          <dependency>
-            <groupId>com.google.code.facebookapi</groupId>
-            <artifactId>facebook-api-annotation-processor</artifactId>
-            <version>1.0</version>
-          </dependency>
-        </dependencies>
-      </plugin>
     </plugins>
   </build>
+  <profiles>
+    <profile>
+      <activation>
+        <jdk>1.5</jdk>
+      </activation>
+      <dependencies>
+        <dependency>
+          <groupId>com.sun.xml.bind</groupId>
+          <artifactId>jaxb-impl</artifactId>
+          <version>2.1.3</version>
+        </dependency>
+        <!--
+            <dependency>
+              <groupId>javax.xml.bind</groupId>
+              <artifactId>jsr173_api</artifactId>
+              <version>1.0</version>
+            </dependency>
+            -->
+      </dependencies>
+    </profile>
+  </profiles>
 </project>
