--- a/branches/composition/facebook-java-api-schema/pom.xml
+++ b/branches/composition/facebook-java-api-schema/pom.xml
@@ -80,4 +80,25 @@
       </plugin>
     </plugins>
   </build>
+  <profiles>
+    <profile>
+      <activation>
+	<jdk>1.5</jdk>
+      </activation>
+      <dependencies>
+	<dependency>
+	  <groupId>com.sun.xml.bind</groupId>
+	  <artifactId>jaxb-impl</artifactId>
+	  <version>2.1.3</version>
+	</dependency>
+	<!--
+	    <dependency>
+	      <groupId>javax.xml.bind</groupId>
+	      <artifactId>jsr173_api</artifactId>
+	      <version>1.0</version>
+	    </dependency>
+	    -->
+      </dependencies>
+    </profile>
+  </profiles>
 </project>
