--- a/.settings/org.maven.ide.eclipse.prefs
+++ b/.settings/org.maven.ide.eclipse.prefs
@@ -1,4 +1,4 @@
-#Thu Oct 02 21:17:41 BST 2008
+#Wed Dec 03 14:25:54 GMT 2008
 activeProfiles=
 eclipse.preferences.version=1
 fullBuildGoals=process-test-resources
