--- a/facebook-java-api-schema/pom.xml
+++ b/facebook-java-api-schema/pom.xml
@@ -3,13 +3,13 @@
   <parent>
     <groupId>com.google.code.facebookapi</groupId>
     <artifactId>parent-pom</artifactId>
-    <version>2.1.2-SNAPSHOT</version>
+    <version>3.0.0-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <groupId>com.google.code.facebookapi</groupId>
   <artifactId>facebook-java-api-schema</artifactId>
   <packaging>jar</packaging>
-  <version>2.1.2-SNAPSHOT</version>
+  <version>3.0.0-SNAPSHOT</version>
   <name>Facebook Java Library</name>
   <description>Facebook Java Library</description>
   
@@ -17,7 +17,13 @@
     <dependency>
       <groupId>org.jvnet.jaxb2_commons</groupId> 
       <artifactId>runtime</artifactId>
-      <version>0.4.1.3</version>
+      <version>0.4.1.5</version>
+      <exclusions>
+      	<exclusion>
+      	  <groupId>com.sun.xml.bind</groupId>
+      	  <artifactId>jaxb-impl</artifactId>
+      	</exclusion>
+      </exclusions>
     </dependency> 
   </dependencies>
   
@@ -27,14 +33,6 @@
       <name>Java.net Maven 2 Repository</name>
       <url>http://download.java.net/maven/2</url>
     </repository>
-    <!--
-	<repository>
-	  <id>maven-repository.dev.java.net</id>
-	  <name>Java.net Maven 1 Repository (legacy)</name>
-	  <url>http://download.java.net/maven/1</url>
-	  <layout>legacy</layout>
-	</repository>
-	-->
   </repositories>
   <pluginRepositories>
     <pluginRepository>
@@ -42,50 +40,43 @@
       <name>Java.net Maven 2 Repository</name>
       <url>http://download.java.net/maven/2</url>
     </pluginRepository>
-    <!--
-	<pluginRepository>
-	  <id>maven-repository.dev.java.net</id>
-	  <name>Java.net Maven 1 Repository (legacy)</name>
-	  <url>http://download.java.net/maven/1</url>
-	  <layout>legacy</layout>
-	</pluginRepository>
-	-->
   </pluginRepositories>
   <build>
     <plugins>
       <plugin>
-		<groupId>org.jvnet.jaxb2.maven2</groupId>
-		<artifactId>maven-jaxb2-plugin</artifactId>
-		<configuration>
-		  <generatePackage>com.google.code.facebookapi.schema</generatePackage>
-		  <extension>true</extension>
-		  <args>
-	            <arg>-XtoString</arg>
-	            <arg>-Xequals</arg>
-	            <arg>-XhashCode</arg>
-		  </args>
-		  <plugins>
-	            <plugin>
-	              <groupId>org.jvnet.jaxb2_commons</groupId>
-	              <artifactId>basic</artifactId>
-	              <version>0.4.1.3</version>
-	            </plugin>
-		  </plugins>
-		</configuration>
-		<dependencies>
-			<dependency>
-		      <groupId>commons-logging</groupId>
-		      <artifactId>commons-logging</artifactId>
-		      <version>1.1.1</version>
-		    </dependency>
-	    </dependencies>
-		<executions>
-		  <execution>
-		    <goals>
-		      <goal>generate</goal>
-		    </goals>
-		  </execution>
-		</executions>
+	<groupId>org.jvnet.jaxb2.maven2</groupId>
+	<artifactId>maven-jaxb2-plugin</artifactId>    
+    <configuration>
+      <generatePackage>com.google.code.facebookapi.schema</generatePackage>
+        
+      <extension>true</extension>
+      <args>
+        <arg>-XtoString</arg>
+        <arg>-Xequals</arg>
+        <arg>-XhashCode</arg>
+      </args>
+      <plugins>
+        <plugin>
+          <groupId>org.jvnet.jaxb2_commons</groupId>
+          <artifactId>basic</artifactId>
+          <version>0.4.1.5</version>
+        </plugin>
+      </plugins>
+    </configuration>
+    <dependencies>
+	  <dependency>
+	    <groupId>commons-logging</groupId>
+	    <artifactId>commons-logging</artifactId>
+	    <version>1.1.1</version>
+	  </dependency>
+    </dependencies>
+	<executions>
+	  <execution>
+	    <goals>
+	      <goal>generate</goal>
+	    </goals>
+	  </execution>
+	</executions>
       </plugin>
     </plugins>
   </build>
@@ -98,6 +89,7 @@
 	<dependency>
 	  <groupId>com.sun.xml.bind</groupId>
 	  <artifactId>jaxb-impl</artifactId>
+	  <version>2.1.3</version>
 	</dependency>
 	<!--
 	    <dependency>
