--- a/facebook-java-api/pom.xml
+++ b/facebook-java-api/pom.xml
@@ -3,13 +3,13 @@
   <parent>
     <groupId>com.google.code.facebookapi</groupId>
     <artifactId>parent-pom</artifactId>
-    <version>2.1.2-SNAPSHOT</version>
+    <version>3.0.0-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
   <groupId>com.google.code.facebookapi</groupId>
   <artifactId>facebook-java-api</artifactId>
   <packaging>jar</packaging>
-  <version>2.1.2-SNAPSHOT</version>
+  <version>3.0.0-SNAPSHOT</version>
   <name>Facebook Java Library</name>
   <description>Facebook Java Library</description>
 
@@ -17,7 +17,7 @@
     <dependency>
       <groupId>com.google.code.facebookapi</groupId>
       <artifactId>facebook-java-api-schema</artifactId>
-      <version>2.1.2-SNAPSHOT</version>
+      <version>3.0.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>commons-logging</groupId>
@@ -27,7 +27,7 @@
     <dependency>
       <groupId>org.json</groupId>
       <artifactId>json</artifactId>
-      <version>20070829</version>
+      <version>20080701</version>
     </dependency>
     <dependency>
       <groupId>javax.servlet</groupId>
@@ -48,37 +48,23 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-        <groupId>commons-httpclient</groupId>
-        <artifactId>commons-httpclient</artifactId>
-        <version>3.1</version>
-        <scope>test</scope>
+      <groupId>commons-httpclient</groupId>
+      <artifactId>commons-httpclient</artifactId>
+      <version>3.1</version>
+      <scope>test</scope>
     </dependency>
+    <!--
+        Compile-time Annotation processor shouldn't end
+        up on runtime classpath
+    -->
+    <!--
     <dependency>
-        <groupId>log4j</groupId>
-        <artifactId>log4j</artifactId>
-        <version>1.2.15</version>
-        <scope>test</scope>
-        <exclusions>
-        	<!-- 
-        	Excluded packages which are not available
-        	on the main Maven repository because otherwise
-        	it's a pain, you have to download them and install
-        	them to your local repository manually.
-        	 -->
-        	<exclusion>
-        		<groupId>javax.jms</groupId>
-        		<artifactId>jms</artifactId>
-        	</exclusion>
-        	<exclusion>
-        		<groupId>com.sun.jdmk</groupId>
-        		<artifactId>jmxtools</artifactId>
-        	</exclusion>
-        	<exclusion>
-        		<groupId>com.sun.jmx</groupId>
-        		<artifactId>jmxri</artifactId>
-        	</exclusion>
-        </exclusions>
+      <groupId>com.google.code.facebookapi</groupId>
+      <artifactId>facebook-api-annotation-6-processor</artifactId>
+      <version>1.0</version>
+      <scope>provided</scope>
     </dependency>
+    -->
   </dependencies>
   <build>
     <plugins>
@@ -95,6 +81,7 @@
       </plugin>
       <plugin>
         <artifactId>maven-assembly-plugin</artifactId>
+        <version>LATEST</version>
         <configuration>
           <descriptors>
             <descriptor>src/main/assembly/bin.xml</descriptor>
@@ -112,6 +99,7 @@
         <dependency>
           <groupId>com.sun.xml.bind</groupId>
           <artifactId>jaxb-impl</artifactId>
+          <version>2.1.3</version>
         </dependency>
         <!--
             <dependency>
