--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <groupId>com.google.code.facebookapi</groupId>
   <artifactId>parent-pom</artifactId>
   <packaging>pom</packaging>
-  <version>2.1.2-SNAPSHOT</version>
+  <version>3.0.0-SNAPSHOT</version>
   <name>Facebook Java Library - Parent Pom</name>
   <description>Facebook Java Library - Parent Pom</description>
   <url>http://code.google.com/p/facebook-java-api/</url>
@@ -19,9 +19,9 @@
     <url>http://code.google.com/p/facebook-java-api/issues/list</url>
   </issueManagement>
   <scm>
-    <url>https://facebook-java-api.googlecode.com/svn/trunk</url>
-    <connection>scm:svn:https://facebook-java-api.googlecode.com/svn/trunk</connection>
-    <developerConnection>scm:svn:https://facebook-java-api.googlecode.com/svn/trunk</developerConnection>
+    <url>https://facebook-java-api.googlecode.com/svn/tags/fbapi-2.0.0</url>
+    <connection>scm:svn:https://facebook-java-api.googlecode.com/svn/tags/fbapi-2.0.0</connection>
+    <developerConnection>scm:svn:https://facebook-java-api.googlecode.com/svn/tags/fbapi-2.0.0</developerConnection>
   </scm>
   <modules>
     <module>facebook-java-api-schema</module>
@@ -67,6 +67,16 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
           <skip>${test.skip}</skip>
+          <systemProperties>
+            <property>
+              <name>APIKEY</name>
+              <value>${APIKEY}</value>
+            </property>
+            <property>
+              <name>SECRET</name>
+              <value>${SECRET}</value>
+            </property>
+          </systemProperties>
         </configuration>
       </plugin>
     </plugins>
@@ -84,7 +94,7 @@
     <repository>
       <uniqueVersion>false</uniqueVersion>
       <id>mrepo-happyfern</id>
-      <url>scp://mrepo@mrepo.happyfern.com/home/mrepo/mrepo.happyfern.com/maven2/</url>
+      <url>sftp://mrepo.happyfern.com/home/mrepo/mrepo.happyfern.com/maven2/</url>
       <!--
           "com.google.code.facebookapi","mrepo@mrepo.happyfern.com:/home/mrepo/mrepo.happyfern.com/maven2/","rsync_ssh","Fernando Padilla","fern@alum.mit.edu",,
         -->
@@ -92,24 +102,24 @@
     <snapshotRepository>
       <uniqueVersion>true</uniqueVersion>
       <id>mrepo-happyfern-snapshot</id>
-      <url>scp://mrepo@mrepo.happyfern.com/home/mrepo/mrepo.happyfern.com/maven2-snapshot/</url>
+      <url>sftp://mrepo.happyfern.com/home/mrepo/mrepo.happyfern.com/maven2-snapshot/</url>
     </snapshotRepository>
-    <site>
-      <id>mrepo-happyfern-sites-facebookjavaapi</id>
-      <name>FacebookJavaApi Website</name>
-      <url>scp://mrepo@mrepo.happyfern.com/home/mrepo/mrepo.happyfern.com/sites/facebook-java-api/</url>
-    </site>
+    <!--
+        <site>
+          <id>mrepo-happyfern-sites-facebookjavaapi</id>
+          <name>Mojo Website</name>
+          <url>sftp://mrepo.happyfern.com/home/mrepo/mrepo.happyfern.com/sites/facebook-java-api/</url>
+        </site>
+        -->
   </distributionManagement>
   
-  <dependencyManagement>
-    <dependencies>
-      <dependency>
+  <dependencies>
+    <dependency>
         <groupId>com.sun.xml.bind</groupId>
         <artifactId>jaxb-impl</artifactId>
         <version>2.1.9</version>
-      </dependency>
-    </dependencies>
-  </dependencyManagement>
+    </dependency>
+  </dependencies>
 
   <properties>
     <test.skip>true</test.skip>
