--- a/branches/composition/facebook-java-api/pom.xml
+++ b/branches/composition/facebook-java-api/pom.xml
@@ -117,6 +117,29 @@
           </descriptors>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>apt-maven-plugin</artifactId>
+        <configuration>
+          <factory>com.google.code.facebookapi.apt.FacebookReturnTypeProcessorFactory5</factory>
+          <fork>true</fork>
+          <executable>${java.home}/../bin/apt</executable>       
+        </configuration>
+        <executions>
+            <execution>
+                <goals>
+                    <goal>process</goal>
+                </goals>
+            </execution>
+        </executions>
+        <dependencies>
+          <dependency>
+            <groupId>com.google.code.facebookapi</groupId>
+            <artifactId>facebook-api-annotation-processor</artifactId>
+            <version>1.0</version>
+          </dependency>
+        </dependencies>
+      </plugin>
     </plugins>
   </build>
   <profiles>
