--- a/branches/composition/facebook-java-api-schema/.classpath
+++ b/branches/composition/facebook-java-api-schema/.classpath
@@ -1,5 +1,5 @@
 <classpath>
-  <classpathentry kind="src" path="target/generated-sources/xjc" including="**/*.java"/>
+  <classpathentry kind="src" path="target/generated-sources/xjc"/>
   <classpathentry kind="src" path="src/main/resources" excluding="**/*.java"/>
   <classpathentry kind="output" path="target/classes"/>
   <classpathentry kind="var" path="M2_REPO/javax/activation/activation/1.1/activation-1.1.jar" sourcepath="M2_REPO/javax/activation/activation/1.1/activation-1.1-sources.jar"/>
