--- a/trunk/facebook-java-api/pom.xml
+++ b/trunk/facebook-java-api/pom.xml
@@ -123,7 +123,7 @@
         <configuration>
           <factory>com.google.code.facebookapi.apt.FacebookReturnTypeProcessorFactory5</factory>
           <fork>true</fork>
-          <executable>${java.home}/../bin/apt</executable>       
+          <!-- <executable>${java.home}/bin/apt</executable> -->
         </configuration>
         <executions>
             <execution>
@@ -136,7 +136,7 @@
           <dependency>
             <groupId>com.google.code.facebookapi</groupId>
             <artifactId>facebook-api-annotation-processor</artifactId>
-            <version>1.0</version>
+            <version>1.0-SNAPSHOT</version>
           </dependency>
         </dependencies>
       </plugin>
