--- a/facebook-api-annotation-processor/trunk/pom.xml
+++ b/facebook-api-annotation-processor/trunk/pom.xml
@@ -1,30 +1,60 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-    <groupId>com.google.code.facebookapi</groupId>
-    <artifactId>facebook-api-annotation-processor</artifactId>
+	<groupId>com.google.code.facebookapi</groupId>
+	<artifactId>facebook-api-annotation-processor</artifactId>
 	<version>1.0</version>
 	<packaging>jar</packaging>
 
 	<build>
-        <finalName>facebook-api-annotation-processor</finalName>
+		<finalName>facebook-api-annotation-processor</finalName>
 		<plugins>
-		    <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>1.5</source>
-                    <target>1.5</target>
-                </configuration>
-		    </plugin>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.5</source>
+					<target>1.5</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-release-plugin</artifactId>
+				<configuration>
+					<tagBase>https://facebook-java-api.googlecode.com/svn/facebook-api-annotation-processor/tags/</tagBase>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<executions>
+					<execution>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 
-    <!-- Don't need tools.jar for a Java 6 annotation -->
+	<distributionManagement>
+		<downloadUrl>http://mrepo.happyfern.com/maven2/</downloadUrl>
+		<repository>
+			<uniqueVersion>false</uniqueVersion>
+			<id>mrepo-happyfern</id>
+			<url>sftp://mrepo.happyfern.com/home/mrepo/mrepo.happyfern.com/maven2/</url>
+		</repository>
+		<snapshotRepository>
+			<uniqueVersion>true</uniqueVersion>
+			<id>mrepo-happyfern-snapshot</id>
+			<url>sftp://mrepo.happyfern.com/home/mrepo/mrepo.happyfern.com/maven2-snapshot/</url>
+		</snapshotRepository>
+	</distributionManagement>
+
 	<profiles>
 		<profile>
 			<activation>
-			    <activeByDefault>true</activeByDefault>
+				<activeByDefault>true</activeByDefault>
 			</activation>
 			<dependencies>
 				<dependency>
